// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BinaryPagination should render empty 1`] = `
<div
  className="BinaryPagination__PaginationContainerSty-sc-1j8x01y-0 cUJyHY"
>
  <div
    className="BinaryPagination__PaginationItemSty-sc-1j8x01y-1 kQHAns"
  />
  <div
    className="BinaryPagination__PaginationItemSty-sc-1j8x01y-1 flucJZ"
  />
</div>
`;

exports[`BinaryPagination should render with data 1`] = `
<div
  className="BinaryPagination__PaginationContainerSty-sc-1j8x01y-0 cUJyHY"
>
  <div
    className="BinaryPagination__PaginationItemSty-sc-1j8x01y-1 kQHAns"
  >
    <ul
      className="pagination binary-pagination"
    >
      <li
        className="page-item"
      >
        <div
          data-mock="Link"
        >
          <span
            className="BinaryPagination__LinkArrowSty-sc-1j8x01y-3 fBsvKd"
          >
            ←
          </span>
          <span
            className="BinaryPagination__LinkTextSty-sc-1j8x01y-2 kcwVsH"
          >
            Prev title
          </span>
        </div>
      </li>
    </ul>
  </div>
  <div
    className="BinaryPagination__PaginationItemSty-sc-1j8x01y-1 flucJZ"
  >
    <ul
      className="pagination binary-pagination"
    >
      <li
        className="page-item"
      >
        <div
          data-mock="Link"
        >
          <span
            className="BinaryPagination__LinkTextSty-sc-1j8x01y-2 kcwVsH"
          >
            Next title
          </span>
          <span
            className="BinaryPagination__LinkArrowSty-sc-1j8x01y-3 fBsvKd"
          >
            →
          </span>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`BinaryPagination should use slug if title not provided 1`] = `
<div
  className="BinaryPagination__PaginationContainerSty-sc-1j8x01y-0 cUJyHY"
>
  <div
    className="BinaryPagination__PaginationItemSty-sc-1j8x01y-1 kQHAns"
  >
    <ul
      className="pagination binary-pagination"
    >
      <li
        className="page-item"
      >
        <div
          data-mock="Link"
        >
          <span
            className="BinaryPagination__LinkArrowSty-sc-1j8x01y-3 fBsvKd"
          >
            ←
          </span>
          <span
            className="BinaryPagination__LinkTextSty-sc-1j8x01y-2 kcwVsH"
          >
            /prev
          </span>
        </div>
      </li>
    </ul>
  </div>
  <div
    className="BinaryPagination__PaginationItemSty-sc-1j8x01y-1 flucJZ"
  >
    <ul
      className="pagination binary-pagination"
    >
      <li
        className="page-item"
      >
        <div
          data-mock="Link"
        >
          <span
            className="BinaryPagination__LinkTextSty-sc-1j8x01y-2 kcwVsH"
          >
            /next
          </span>
          <span
            className="BinaryPagination__LinkArrowSty-sc-1j8x01y-3 fBsvKd"
          >
            →
          </span>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`BinaryPagination shouldn't render without slug 1`] = `
<div
  className="BinaryPagination__PaginationContainerSty-sc-1j8x01y-0 cUJyHY"
>
  <div
    className="BinaryPagination__PaginationItemSty-sc-1j8x01y-1 kQHAns"
  />
  <div
    className="BinaryPagination__PaginationItemSty-sc-1j8x01y-1 flucJZ"
  />
</div>
`;
